# secure_agent_flow

./: .gitignore  README.md  agents.py  build_layer.sh  config.py  crew.py  crew_main.py  lambda_handler.py  main.py  main.tf  outputs.tf  pyproject.toml  serverless.json  tasks.py  terraform.tfvars.example  test_connection.py  ui.py  ui_new.py  utils.py  variables.tf  websocket_handler.py
custom_tools/: custom_role_creator.py  role_fetcher.py  sca_tool.py
knowledge/: CyberArk-uap-schema-api-main-resolved.json  Secure Cloud Access APIs.json
ui_test/: crew_test.py  ui.py
