[project]
name = "secure-agent-flow"
version = "0.1.0"
description = "A CrewAI-based secure agent flow for role analysis and policy creation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.186.1",
    "crewai-tools[mcp]>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.1.0",
    "awslabs-iam-mcp-server>=1.0.6",
    "mcp>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "*.tf",
    "*.tfvars*",
    "*.sh",
    "*.zip",
    ".terraform*",
    "*.log",
    "README.md",
    "requirements.txt",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
